# axle-interview

./: .gitignore  README.md  build-push-go.sh  go.Dockerfile
go-motive-webhook/: app.go  extract.go  go.mod  go.sum  load.go
python-motive-webhook/: README.md  app.py  pyproject.toml
python-motive-webhook/clients/: motive.py
python-motive-webhook/pipeline/: pipeline.py
